; ModuleID = '/home/carl/AnghaBench/reactos/base/services/nfsd/extr_name_cache.c_name_cmp.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/nfsd/extr_name_cache.c_name_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.name_cache_entry = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @name_cmp(%struct.name_cache_entry* %0, %struct.name_cache_entry* %1) #0 {
  %3 = alloca %struct.name_cache_entry*, align 8
  %4 = alloca %struct.name_cache_entry*, align 8
  %5 = alloca i32, align 4
  store %struct.name_cache_entry* %0, %struct.name_cache_entry** %3, align 8
  store %struct.name_cache_entry* %1, %struct.name_cache_entry** %4, align 8
  %6 = load %struct.name_cache_entry*, %struct.name_cache_entry** %4, align 8
  %7 = getelementptr inbounds %struct.name_cache_entry, %struct.name_cache_entry* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.name_cache_entry*, %struct.name_cache_entry** %3, align 8
  %10 = getelementptr inbounds %struct.name_cache_entry, %struct.name_cache_entry* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = sub nsw i32 %8, %11
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  br label %28

17:                                               ; preds = %2
  %18 = load %struct.name_cache_entry*, %struct.name_cache_entry** %3, align 8
  %19 = getelementptr inbounds %struct.name_cache_entry, %struct.name_cache_entry* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.name_cache_entry*, %struct.name_cache_entry** %4, align 8
  %22 = getelementptr inbounds %struct.name_cache_entry, %struct.name_cache_entry* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.name_cache_entry*, %struct.name_cache_entry** %3, align 8
  %25 = getelementptr inbounds %struct.name_cache_entry, %struct.name_cache_entry* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @strncmp(i32 %20, i32 %23, i32 %26)
  br label %28

28:                                               ; preds = %17, %15
  %29 = phi i32 [ %16, %15 ], [ %27, %17 ]
  ret i32 %29
}

declare dso_local i32 @strncmp(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
